--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@ Third Year Undergraduate at Stanford University<br/>
 
 <div class="w3-panel w3-leftbar w3-light-grey">
       <p class="w3-xlarge w3-serif">
-      <i>"It isn't that we dream too wild a dream: 
-        The trouble is we do not make it seem
-        Sufficiently unlikely; for the most
+      <i>"It isn't that we dream too wild a dream: <br>
+        The trouble is we do not make it seem <br>
+        Sufficiently unlikely; for the most <br>
         We can think up is a domestic ghost."</i></p>
         <p>--- Vladmir Nabokov <i>Pale Fire</i></p>
 </div>
