--- a/index.html
+++ b/index.html
@@ -100,45 +100,9 @@ Third Year Undergraduate at Stanford University<br/>
 <br> -->
 
 
-<a name="project"></a>
-<h3>Dissertation</h3>
-<div class="mainsection">
-<ul>
-
-<table width="100%">
-
-<tr>
-<td width="30%" valign="top"><p><img src="logos/stanford.png" width="200" alt="" style="border-style: none; display: block; margin-left: auto; margin-right: auto;" align="top"></p></td>
-<td width="70%" valign="top"><p>
-    <h3>
-        Learning Compositional and Actionable Visual Representations for 3D Shapes
-    </h3>
-    <strong>Kaichun Mo</strong><br>
-    Ph.D. Thesis<br><br>
-    <i><b style="color: red;">Featured in: </b>
-        <a href="https://www.rsipvision.com/ComputerVisionNews-2022June/22/" target="_blank">Computer Vision News magazine (June 2022)</a>
-    </i>
-    <p>
-    The representation of 3D objects, or 3D shapes, is one of the cornerstones of human-level 3D vision and robotics systems.  This is notoriously challenging given that 3D shapes have extraordinarily diverse geometries, rich functional semantics, and complicated part structures.  In the meantime, the complex nature of 3D tasks in vision, graphics and robotics is another challenge we are facing.
-    To this end, this thesis explores to tackle the core problems of building compositional and actionable visual representations for diverse 3D shapes and designing scalable learning frameworks for various 3D tasks.
-    </p>
-    <a href="https://purl.stanford.edu/xn613mb1512" target="_blank">[Paper]</a>
-</p></td>
-</tr>
-
-</table>
-</ul>
-</div>
-<br>
 
 
-</table>
-</ul>
-</div>
-<br>
-
-
-<a name="publications"></a>
+<a name="projects"></a>
 <h3>Research</h3>
 <div class="mainsection">
 <ul>
