--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Third Year Undergraduate at Stanford University<br/>
 
 
 
-<a name="projects"></a>
+<a name="project"></a>
 <h3>Research</h3>
 <div class="mainsection">
 <ul>
@@ -139,7 +139,10 @@ Third Year Undergraduate at Stanford University<br/>
 </tr>
 
 <tr><td><br/></td></tr>
-
+</table>
+</ul>
+</div>
+<br>
 <br>
 
 <a name="talks"></a>
