--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@ Third Year Undergraduate at Stanford University<br/>
     <strong>Kiyohiro Nakayama</strong>,
     <a href="https://mikacuy.github.io/" target="_blank">Mikaela Angelina Uy</a>,
     <a href="https://cg.cs.tsinghua.edu.cn/people/~huangjh/" target="_blank">Jiahui Huang</a>,
-    <a href="https://cg.cs.tsinghua.edu.cn/shimin.htm" target="_blank">Shi-Min Hu</a><br>
-    <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a><br>
-    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonadis J. Guibas</a>
+    <a href="https://cg.cs.tsinghua.edu.cn/shimin.htm" target="_blank">Shi-Min Hu</a>
+    <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a>
+    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonadis J. Guibas</a><br>
     In Submission
     <p>
         We introduce DiffFacto, a novel probabilistic generative model that learns the distribution of shapes with part-level control. 
