--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Third Year Undergraduate at Stanford University<br/>
     <a href="https://cg.cs.tsinghua.edu.cn/people/~huangjh/" target="_blank">Jiahui Huang</a>,
     <a href="https://cg.cs.tsinghua.edu.cn/shimin.htm" target="_blank">Shi-Min Hu</a>
     <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a>
-    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonadis J. Guibas</a><br>
+    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a><br>
     In Submission
     <p>
         We introduce DiffFacto, a novel probabilistic generative model that learns the distribution of shapes with part-level control. 
