--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Third Year Undergraduate at Stanford University<br/>
     <p>
     I am fortunate to work in 
     <a href="https://geometry.stanford.edu/" target="_blank">The Stanford Geometric Computation Group</a> under 
-    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonadis J. Guibas</a>.
+    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonidas J. Guibas</a>.
 
     In the lab I am mentored by 
     <a href="https://mikacuy.github.io/" target="_blank">Mikaela Angelina Uy</a>, whose help and support I cannot appreciate enough. 
@@ -166,7 +166,7 @@ Third Year Undergraduate at Stanford University<br/>
     <td width="85%" valign="top">
         <p><b>Bachelor of Art in Mathematics, Stanford University</b><br/>2019.9 - 2024.6 (expected)<br/><br/>
         Academic Advisor: <a href="http://math.stanford.edu/~andras/" target='_blank'>Prof. Andras Vásy</a>
-        Research Advisor: <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonadis J. Guibas</a>
+        Research Advisor: <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonidas J. Guibas</a>
         </p></td>
 </tr>
 <tr></tr>
