--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Third Year Undergraduate at Stanford University<br/>
     <a href="https://cg.cs.tsinghua.edu.cn/shimin.htm" target="_blank">Shi-Min Hu</a>
     <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a>
     <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a><br>
-    In Submission
+    IEEE International Conference on Computer Vision (ICCV), 2023
     <p>
         We introduce DiffFacto, a novel probabilistic generative model that learns the distribution of shapes with part-level control. 
         We propose a factorization that models independent part style and part configuration distributions, 
