--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Third Year Undergraduate at Stanford University<br/>
     under the supervision of 
     <a href="https://cg.cs.tsinghua.edu.cn/shimin.htm" target='_blank'>Prof. Shi-Min Hu</a>.
     There, I am mentored by two wonderful mentors 
-    <a href="https://cg.cs.tsinghua.edu.cn/people/~huangjh/" target="_blank">Jiahui Huang</a> and Guo-Wei Yang.
+    <a href="https://cg.cs.tsinghua.edu.cn/people/~huangjh/" target="_blank">Jiahui Huang</a> and Guo-Ye Yang.
     </p>
 </div>
 <!-- <br>
