--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Third Year Undergraduate at Stanford University<br/>
 <h3>Honors and Awards</h3>
 <div class="section">
 <ul>
-    <li>[2017], Qualifier of United States Mathematics Olympiad</li>
+    <li>[2017], Qualifier of USAMO</li>
 </ul>
 </div>
 <br>
