--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ Master's Student at Stanford University<br/>
         <strong>Kiyohiro Nakayama</strong>,
         <a href="https://mikacuy.github.io/" target="_blank">Mikaela Angelina Uy</a>,
         <a href="https://qq456cvb.github.io/" target="_blank">Yang You</a>,
-        <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a><br>
-        <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a>,
+        <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a>,
+        <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a><br>
         Advances in Neural Information Processing Systems (NeurIPS), 2024
         <p>
             Neural radiance fields (NeRFs) have gained popularity with multiple works showing promising results across various applications.
