--- a/index.html
+++ b/index.html
@@ -108,10 +108,43 @@ Master's Student at Stanford University<br/>
 <div class="mainsection">
 <ul>
 
-<!-- (<sup>*</sup>: indicates equal contribution.) -->
+(<sup>*</sup>: indicates equal contribution.)
 
 <table width="100%">
 <!--  ProvNeRF -->
+<tr>
+    <td width="30%" valign="top"><p><img src="papers/aipparel.png" width="300" alt="" style="border-style: none" align="top"></p></td>
+    <td width="70%" valign="top"><p>
+        <h3>
+            AIpparel: A Large Multimodal Generative Model for Digital Garments
+        </h3>
+        <strong>Kiyohiro Nakayama</strong><sup>*</sup>,
+        <a href="https://janackermann.info/"  target="_blank">Jan Ackermann</a><sup>*</sup>
+      <a href="https://kesdogan.github.io/"  target="_blank">Timur Levent Kesdogan</a><sup>*</sup>
+      <a href="https://y-zheng18.github.io/"  target="_blank">Yang Zheng</a>
+      <a href="https://korosteleva.com/"  target="_blank">Maria Korosteleva</a>
+      <a href="https://igl.ethz.ch/people/sorkine/"  target="_blank">Olga Sorkine-Hornung</a>
+      <a href="https://geometry.stanford.edu/member/guibas/"  target="_blank">Leonidas Guibas</a>
+      <a href="https://www.guandaoyang.com/"  target="_blank">Guandao Yang</a>
+      <a href="https://stanford.edu/~gordonwz/"  target="_blank">Gordon Wetzstein</a><br>
+        (Under Review)
+        <p>
+            Apparel is essential to human life, offering protection, mirroring cultural identities, 
+            and showcasing personal style. Yet, the creation of garments remains a time-consuming process, 
+            largely due to the manual work involved in designing them. 
+            To simplify this process, we introduce AIpparel, a large multimodal model for generating and editing sewing patterns. 
+            Our model fine-tunes state-of-the-art large multimodal models (LMMs) on a custom-curated large-scale dataset 
+            of over 120,000 unique garments, each with multimodal annotations including text, images, and sewing patterns. 
+            Additionally, we propose a novel tokenization scheme that concisely encodes these complex sewing patterns 
+            so that LLMs can learn to predict them efficiently. AIpparel achieves state-of-the-art performance in single-modal tasks, 
+            including text-to-garment and image-to-garment prediction, and it enables novel multimodal garment generation applications 
+            such as interactive garment editing.
+        </p>
+        <a href="https://georgenakayama.github.io/AIpparel/" target="_blank">[Project]</a> <a href="https://arxiv.org/abs/2412.03937" target="_blank">[Paper]</a> <a href="" target="_blank">[Code]</a>
+        <!-- <a href="bibtex/GeoConcept.txt" target="_blank">[BibTex]</a> -->
+    </p></td>
+
+    <!--  ProvNeRF -->
 <tr>
     <td width="30%" valign="top"><p><img src="papers/provNeRF.png" width="300" alt="" style="border-style: none" align="top"></p></td>
     <td width="70%" valign="top"><p>
@@ -133,6 +166,7 @@ Master's Student at Stanford University<br/>
             We show that modeling per-point provenance during the NeRF optimization enriches the model with information on triangulation leading to improvements in novel view synthesis and uncertainty estimation under the challenging sparse, 
             unconstrained view setting against competitive baselines.
         </p>
+        <a href="https://provnerf.github.io/" target="_blank">[Project]</a> <a href="https://arxiv.org/abs/2401.08140" target="_blank">[Paper]</a> <a href="" target="_blank">[Code]</a>
         <!-- <a href="bibtex/GeoConcept.txt" target="_blank">[BibTex]</a> -->
     </p></td>
 
@@ -165,6 +199,7 @@ Master's Student at Stanford University<br/>
             outperforms baseline models with slight computational overhead. In addition, it shows excellent generalization ability and
             can be used to improve performance with various state-ofthe-art backbones and detection methods.
         </p>
+        <a href="https://arxiv.org/abs/2312.09609" target="_blank">[Paper]</a>
         <!-- <a href="bibtex/GeoConcept.txt" target="_blank">[BibTex]</a> -->
     </p></td>
 </tr>
@@ -194,6 +229,7 @@ Master's Student at Stanford University<br/>
         reconstruction, and stronger depth supervision. Our proposed formulation can be
         also be used as a drop-in replacement to the volume rendering equation for existing methods like NeRFs
     </p>
+    <a href="https://pl-nerf.github.io/" target="_blank">[Project]</a> <a href="https://arxiv.org/abs/2310.20685" target="_blank">[Paper]</a> <a href="https://github.com/mikacuy/PL-NeRF" target="_blank">[Code]</a>
     <!-- <a href="bibtex/GeoConcept.txt" target="_blank">[BibTex]</a> -->
 </p></td>
 </tr>
@@ -220,7 +256,7 @@ Master's Student at Stanford University<br/>
             It achieves state-of-the-art part-level generation quality and generates plausible and coherent shape, 
             while enabling various downstream editing applications such as shape interpolation, mixing and transformation editing.
         </p>
-        <!-- <a href="bibtex/GeoConcept.txt" target="_blank">[BibTex]</a> -->
+        <a href="https://difffacto.github.io/" target="_blank">[Project]</a> <a href="https://arxiv.org/abs/2305.01921" target="_blank">[Paper]</a> <a href="https://github.com/diffFacto/diffFacto" target="_blank">[Code]</a>
     </p></td>
     </tr>
 <tr><td><br/></td></tr>
@@ -249,7 +285,16 @@ Master's Student at Stanford University<br/>
 <tr>
     <td width="15%" valign="top"><p><img src="logos/stanford.png" width="100" alt="" style="border-style: none" align="top"></p></td>
     <td width="85%" valign="top">
-        <p><b>Bachelor of Art in Mathematics, Stanford University</b><br/>2019.9 - 2024.6 (expected)<br/><br/>
+        <p><b>Master of Engineering in Computer Science, Stanford University</b><br/>2024.12 - 2025.6 (expected)<br/><br/>
+        Research Advisor: <a href="https://graphics.stanford.edu/~djames/" target="_blank">Prof. Doug L. James</a>
+        </p></td>
+</tr>
+<tr></tr>
+
+<tr>
+    <td width="15%" valign="top"><p><img src="logos/stanford.png" width="100" alt="" style="border-style: none" align="top"></p></td>
+    <td width="85%" valign="top">
+        <p><b>Bachelor of Art in Mathematics, Stanford University</b><br/>2019.9 - 2025.6 (expected)<br/><br/>
         Academic Advisor: <a href="http://math.stanford.edu/~andras/" target='_blank'>Prof. Andras Vásy</a>
         Research Advisor: <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonidas J. Guibas</a>
         </p></td>
@@ -304,5 +349,5 @@ Master's Student at Stanford University<br/>
 
 
 <hr/>
-<div id="footer" style="font-size:10">George Nakayama <i>Last updated: Apr, 2023</i></div>
+<div id="footer" style="font-size:10">George Nakayama <i>Last updated: Dec, 2024</i></div>
 </body>
