--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@ Master's Student at Stanford University<br/>
             AIpparel: A Large Multimodal Generative Model for Digital Garments
         </h3>
         <strong>Kiyohiro Nakayama</strong><sup>*</sup>,
-        <a href="https://janackermann.info/"  target="_blank">Jan Ackermann</a><sup>*</sup>
-      <a href="https://kesdogan.github.io/"  target="_blank">Timur Levent Kesdogan</a><sup>*</sup>
-      <a href="https://y-zheng18.github.io/"  target="_blank">Yang Zheng</a>
-      <a href="https://korosteleva.com/"  target="_blank">Maria Korosteleva</a>
-      <a href="https://igl.ethz.ch/people/sorkine/"  target="_blank">Olga Sorkine-Hornung</a>
-      <a href="https://geometry.stanford.edu/member/guibas/"  target="_blank">Leonidas Guibas</a>
-      <a href="https://www.guandaoyang.com/"  target="_blank">Guandao Yang</a>
+        <a href="https://janackermann.info/"  target="_blank">Jan Ackermann</a><sup>*</sup>,
+      <a href="https://kesdogan.github.io/"  target="_blank">Timur Levent Kesdogan</a><sup>*</sup>,
+      <a href="https://y-zheng18.github.io/"  target="_blank">Yang Zheng</a>,
+      <a href="https://korosteleva.com/"  target="_blank">Maria Korosteleva</a>,
+      <a href="https://igl.ethz.ch/people/sorkine/"  target="_blank">Olga Sorkine-Hornung</a>,
+      <a href="https://geometry.stanford.edu/member/guibas/"  target="_blank">Leonidas Guibas</a>,
+      <a href="https://www.guandaoyang.com/"  target="_blank">Guandao Yang</a>,
       <a href="https://stanford.edu/~gordonwz/"  target="_blank">Gordon Wetzstein</a><br>
         (Under Review)
         <p>
