--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Master's Student at Stanford University<br/>
 
     <p>
     I am fortunate to work under the supervision of 
-    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonidas J. Guibas</a>, 
+    <a href="https://profiles.stanford.edu/leonidas-guibasindex.html" target="_blank">Prof. Leonidas J. Guibas</a>, 
     <a href="https://stanford.edu/~gordonwz/" target="_blank">Prof. Gordon Wetzstein</a>, and 
     <a href="https://graphics.stanford.edu/~djames/" target="_blank">Prof. Doug L. James</a>.
 
@@ -124,7 +124,7 @@ Master's Student at Stanford University<br/>
       <a href="https://y-zheng18.github.io/"  target="_blank">Yang Zheng</a>,
       <a href="https://korosteleva.com/"  target="_blank">Maria Korosteleva</a>,
       <a href="https://igl.ethz.ch/people/sorkine/"  target="_blank">Olga Sorkine-Hornung</a>,
-      <a href="https://geometry.stanford.edu/member/guibas/"  target="_blank">Leonidas Guibas</a>,
+      <a href="https://profiles.stanford.edu/leonidas-guibas"  target="_blank">Leonidas Guibas</a>,
       <a href="https://www.guandaoyang.com/"  target="_blank">Guandao Yang</a>,
       <a href="https://stanford.edu/~gordonwz/"  target="_blank">Gordon Wetzstein</a><br>
         (Under Review)
@@ -155,7 +155,7 @@ Master's Student at Stanford University<br/>
         <a href="https://mikacuy.github.io/" target="_blank">Mikaela Angelina Uy</a>,
         <a href="https://qq456cvb.github.io/" target="_blank">Yang You</a>,
         <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a>,
-        <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a><br>
+        <a href="https://profiles.stanford.edu/leonidas-guibasindex.html" target="_blank">Leonidas J. Guibas</a><br>
         Advances in Neural Information Processing Systems (NeurIPS), 2024
         <p>
             Neural radiance fields (NeRFs) have gained popularity with multiple works showing promising results across various applications.
@@ -214,7 +214,7 @@ Master's Student at Stanford University<br/>
     <strong>Kiyohiro Nakayama</strong>,
     <a href="https://www.guandaoyang.com/" target="_blank">Guangdao Yang</a>,
     Rahul Krishna, 
-    <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a>,
+    <a href="https://profiles.stanford.edu/leonidas-guibasindex.html" target="_blank">Leonidas J. Guibas</a>,
     <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a><br>
     Advances in Neural Information Processing Systems (NeurIPS), 2023
     <p>
@@ -246,7 +246,7 @@ Master's Student at Stanford University<br/>
         <a href="https://cg.cs.tsinghua.edu.cn/people/~huangjh/" target="_blank">Jiahui Huang</a>,
         <a href="https://cg.cs.tsinghua.edu.cn/shimin.htm" target="_blank">Shi-Min Hu</a>
         <a href="http://www.sfu.ca/~keli/" target="_blank">Ke Li</a>
-        <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Leonidas J. Guibas</a><br>
+        <a href="https://profiles.stanford.edu/leonidas-guibasindex.html" target="_blank">Leonidas J. Guibas</a><br>
         IEEE International Conference on Computer Vision (ICCV), 2023
         <p>
             We introduce DiffFacto, a novel probabilistic generative model that learns the distribution of shapes with part-level control. 
@@ -296,7 +296,7 @@ Master's Student at Stanford University<br/>
     <td width="85%" valign="top">
         <p><b>Bachelor of Art in Mathematics, Stanford University</b><br/>2019.9 - 2025.6 (expected)<br/><br/>
         Academic Advisor: <a href="http://math.stanford.edu/~andras/" target='_blank'>Prof. Andras Vásy</a>
-        Research Advisor: <a href="https://geometry.stanford.edu/member/guibas/index.html" target="_blank">Prof. Leonidas J. Guibas</a>
+        Research Advisor: <a href="https://profiles.stanford.edu/leonidas-guibasindex.html" target="_blank">Prof. Leonidas J. Guibas</a>
         </p></td>
 </tr>
 <tr></tr>
