--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 Master's Student at Stanford University<br/>
 </div>
 <div>
-    <b>Email:</b> <tt>w4756677 [at] stanford [dot] com</tt><br>
+    <b>Email:</b> <tt>w4756677 [at] stanford [dot] edu</tt><br>
 </div>
 <div>
 <a href="resources/Resume.pdf" target='_blank'>[CV (November, 2024)]</a>&nbsp;
