--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ Master's Student at Stanford University<br/>
       <a href="https://profiles.stanford.edu/leonidas-guibas"  target="_blank">Leonidas J. Guibas</a>,
       <a href="https://www.guandaoyang.com/"  target="_blank">Guandao Yang</a>,
       <a href="https://stanford.edu/~gordonwz/"  target="_blank">Gordon Wetzstein</a><br>
-        (Under Review)
+        CVPR 2025
         <p>
             Apparel is essential to human life, offering protection, mirroring cultural identities, 
             and showcasing personal style. Yet, the creation of garments remains a time-consuming process, 
